feat: support streaming weather data for two zipcodes
Round-robin through configured zipcodes, making one API call every
3 seconds. With two zipcodes each location is polled every ~6 seconds
(~20 calls/min), staying within the OpenWeatherMap free tier.

- Add ZIPCODE_2 env var (optional, falls back to single-location mode)
- Replace fixed single-zipcode loop with itertools.cycle round-robin
- Attach zipcode to each weather payload and use it as Kafka message key
- Add composite (zipcode, timestamp) index for timeseries queries
- Update README with multi-zipcode setup and usage instructions

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 API_KEY=your_openweathermap_api_key
 ZIPCODE=10001
+ZIPCODE_2=90210
 COUNTRY_CODE=US
 KAFKA_TOPIC=weather-data
 KAFKA_BOOTSTRAP_SERVERS=localhost:9092
